--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules","migrations", "test", "dist", "**/*spec.ts"]
+  "exclude": ["node_modules","src/migrations","src/data-source.ts", "test", "dist", "**/*spec.ts"]
 }
